/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package util;
option java_package = "com.sandpolis.core.proto.util";

/**
 * A configuration for a socket listener.
 */
message ListenerConfig {

	// The listener ID
	int64 id = 1;
	
	// An optional name for the listener
	string name = 2;
	
	// The listening port
	int32 port = 3;
	
	// The bind address
	string address = 4;
	
	// The username of the user that owns the listener
	string owner = 5;
	
	// Indicates whether automatic port forwarding with UPnP will be attempted
	bool upnp = 6;
	
	// Indicates whether client instances can be accepted by the listener
	bool client_acceptor = 7;
	
	// Indicates whether viewer instances can be accepted by the listener
	bool viewer_acceptor = 8;
	
	// Indicates whether the listener can be started
	bool enabled = 9;
	
	// Certificate
	bytes cert = 10;
	
	// Private key for the certificate
	bytes key = 11;
}